# charon

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  train.sh
no_mpi/: CMakeLists.txt  train.sh
no_mpi/src/: eigen_wrapper.hpp  interval.cpp  interval.hpp  learn.cpp  run_charon.cpp  strategy.cpp
refactoring/: deploy.sh  train.sh
refactoring/src/: eigen_wrapper.hpp  learn.cpp  network.cpp  network.hpp  powerset.cpp  powerset.hpp  run_charon.cpp  strategy.cpp  strategy.hpp
singleton/: CMakeLists.txt  deploy.sh
singleton/src/: attack.py  learn.cpp  network.hpp  powerset.cpp  run_charon.cpp  strategy.cpp  strategy.hpp  utils.hpp
src/: 2a  bayesian_opt.cpp  eigen_wrapper.hpp  interface.py  interval.cpp  interval.hpp  network.cpp  network.hpp  powerset.cpp  powerset.hpp  run_charon.cpp  strategy.cpp  strategy.hpp  utils.hpp
